--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name:sksjw95
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Try to use Git / Github
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -18,10 +18,10 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email:tjwldnd95@hanmail.net
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: sksjw95
   instagram:
   linkedin:
   pinterest:
